[package]
name = "no_drama"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.23.1"
simple-error = "0.1.9"
rand = "0.8.4"
csv = "1.1.6"
pagemap = "0.1.0"
clap = { version = "3.0.10", features = ["derive"] }
anyhow = "1.0.52"
num-integer = "0.1.44"
indicatif = "0.16.2"
console = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"